Resolves the mobile collapse problem with bootstraps toggle nav menu.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,10 +26,10 @@
   line-height: 1.8rem;
 }
 
-.breather-left {
-  margin-left: 40px;
-}
-
 .breather-right {
   margin-right: 20px;
+}
+
+.breather-right-x2 {
+  margin-right: 40px;
 }
